* Adding OAuth Authentication flow to get tokens from the bot without going through 3rd party services like swiftyspiffy's token generator service. * Fixed a few bugs.     Getting people closer to being able to just download, compile and run.

--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,8 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+/TwitchLib
+/TwitchLib.Api
+/TwitchLib.Client
+/TwitchLib.PubSub/TwitchLib.PubSub
+/TwitchLib.WebSocket
